--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,6 +98,12 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/fonts/
+  fonts:
+    - family: NotoSansTC
+      fonts:
+        - asset: assets/fonts/NotoSansTC-Regular.otf
+        - asset: assets/fonts/NotoSansTC-Bold.otf
+          weight: 700
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
