將firebase設定檔案加入 .gitignore，避免它被上傳。 提供一個範例檔案（例如 firebase_options.example.dart），其中包含相同的結構但使用假資料，讓其他開發者知道如何配置。 在專案文檔中說明如何取得並配置真實的 Firebase 設定檔。

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# 忽略 Firebase 設定檔
+lib/core/config/firebase_options.dart
