1將 google-services.json 和 GoogleService-Info.plist 加入 .gitignore，避免它們被上傳。 2建立範例檔案： android/app/google-services.example.json ios/Runner/GoogleService-Info.example.plist 這些範例檔案包含相同的結構但使用假資料，讓其他開發者知道如何配置。 3在專案文檔（README.md）中更新說明，詳細說明如何取得並配置真實的 Firebase 設定檔，包括 google-services.json 和 GoogleService-Info.plist。

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ app.*.map.json
 
 # 忽略 Firebase 設定檔
 lib/core/config/firebase_options.dart
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
