--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ dependencies:
   firebase_crashlytics: ^4.3.7
   # Push Notifications
   firebase_messaging: ^15.2.7
-  flutter_local_notifications: ^19.2.1
+  flutter_local_notifications: 19.0.0
   sqflite: ^2.3.0
   path: ^1.8.3
   http: ^1.1.2
