--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,9 @@ dependencies:
   http: ^1.1.2
   qr_flutter: ^4.1.0
   firebase_database: ^11.3.7
+  flutter_map: ^8.1.1
+  latlong2: ^0.9.1
+  geolocator: ^14.0.1
 
 dev_dependencies:
   flutter_test:
