--- a/.gitignore
+++ b/.gitignore
@@ -50,5 +50,5 @@ ios/Runner/GoogleService-Info.plist
 # 忽略應用程式配置檔 ,之後要再建立新的app_config.dart
 lib/core/config/app_config.dart
 
-# FVM Version Cache flutter版本控制
+# FVM Version Cache
 .fvm/
