Revert "將 app_config.dart 和 firebase_options.dart 從 Git 追蹤清單中移除"
This reverts commit c4b8b88449fd165e260262f5244d92b113a1510d.

--- a/.gitignore
+++ b/.gitignore
@@ -47,5 +47,5 @@ lib/core/config/firebase_options.dart
 android/app/google-services.json
 ios/Runner/GoogleService-Info.plist
 
-# 忽略應用程式配置檔 ,之後要再建立新的app_config.dart
+# 忽略應用程式配置檔
 lib/core/config/app_config.dart
