--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   qr_flutter: ^4.1.0
   firebase_database: ^11.3.7
   flutter_map: ^8.1.1
+  flutter_map_cancellable_tile_provider: ^3.1.0
   latlong2: ^0.9.1
   geolocator: ^14.0.1
 
